<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#4CAF50"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_pindah_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pindah_activity"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_pindah_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pindah_activity_dengan_data"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_a_number"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textColor="#4CAF50" />

    <Button
        android:id="@+id/btn_pindah_activity_objek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pindah_activity_dengan_objek"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_pindah_untuk_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pindah_activity_untuk_hasil"
        android:textColor="#4CAF50"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hasil"
        android:textSize="25sp"
        android:text="@string/hasil"
        android:gravity="center"
        android:textStyle="bold"/>

</LinearLayout>